--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@deepgram/sdk": "^4.11.2",
     "@elevenlabs/elevenlabs-js": "^2.26.0",
     "@google/genai": "^1.34.0",
+    "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -25,17 +26,20 @@
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@vercel/analytics": "^1.5.0",
+    "apify-client": "^2.22.0",
     "autoprefixer": "^10.4.19",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.3.21",
+    "jsdom": "^27.4.0",
     "lucide-react": "^0.424.0",
     "next": "^13.5.6",
     "openai": "^5.15.0",
     "pdf-parse-fork": "^1.2.0",
     "pdfjs-dist": "^3.6.172",
+    "puppeteer": "^24.36.1",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
@@ -43,15 +47,18 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.2",
     "threejs-components": "^0.0.27",
+    "turndown": "^7.2.2",
     "uuid": "^10.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^20.19.25",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/turndown": "^5.0.6",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
