--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vercel/analytics": "^1.5.0",
     "apify-client": "^2.22.0",
     "autoprefixer": "^10.4.19",
+    "bufferutil": "^4.1.0",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +49,7 @@
     "three": "^0.181.2",
     "threejs-components": "^0.0.27",
     "turndown": "^7.2.2",
+    "utf-8-validate": "^6.0.6",
     "uuid": "^10.0.0",
     "zustand": "^5.0.8"
   },
