--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "framer-motion": "^11.3.21",
     "jsdom": "^27.4.0",
     "lucide-react": "^0.424.0",
+    "motion": "^12.33.0",
     "next": "^13.5.6",
+    "ogl": "^1.0.11",
     "openai": "^5.15.0",
     "pdf-parse-fork": "^1.2.0",
     "pdfjs-dist": "^3.6.172",
