--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@elevenlabs/elevenlabs-js": "^2.26.0",
     "@google/genai": "^1.34.0",
     "@mozilla/readability": "^0.6.0",
+    "@polar-sh/sdk": "^0.43.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
